unpackaged/main/default/objects/Account_Credit__c/Account_Credit__c.object-meta.xml
<CustomObject>
    <description>Re-design of Credit information directly to an Account record, and allow multiple SO records to be linked.</description>
    <label>Account-Credit</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>Account-Credit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account-Credit</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>