unpackaged/main/default/objects/Account_Credit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account-Credit</relationshipLabel>
    <relationshipName>Account_Credit</relationshipName>
    <type>Lookup</type>
</CustomField>