unpackaged/main/default/objects/Account_Credit__c/fields/Advance_Payments__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if Advance Payments are Required</inlineHelpText>
    <label>Advance Payments</label>
    <type>Checkbox</type>
</CustomField>