unpackaged/main/default/objects/Account_Credit__c/fields/Master_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Customer_Number__c</fullName>
    <inlineHelpText>Master Customer Number</inlineHelpText>
    <label>Master Customer Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>