unpackaged/main/default/objects/Account_Credit__c/fields/Remaining_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Deposit_Amount__c</fullName>
    <label>Remaining Deposit Amount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>