unpackaged/main/default/objects/Account_Credit__c/validationRules/VADVN30_Credit_Term_Summary.validationRule-meta.xml
<ValidationRule>
    <fullName>VADVN30_Credit_Term_Summary</fullName>
    <active>true</active>
    <description>If Credit Summary is set to VADV/N30, you must enter the Terms Detail.</description>
    <errorConditionFormula>AND (
ISPICKVAL(   Credit_Summary__c  , &#39;VADV/N30: Variable advance payments as stipulated in credit decision/client contract and system, balance due in 30 days&#39;),
NOT(LEN(   Terms_Detail__c   ) &gt;1))</errorConditionFormula>
    <errorDisplayField>Terms_Detail__c</errorDisplayField>
    <errorMessage>If Credit Summary is set to VADV/N30, you must enter the Terms Detail.</errorMessage>
</ValidationRule>