unpackaged/main/default/objects/Account_Credit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Account__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Sales_Person__c</columns>
    <columns>Credit_Approver__c</columns>
    <columns>Terms_Detail__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>